Bug Fixing
Addad swagger, created fetchJokeService, and bug fixing