@@ -1,30 +1,16 @@
 package com.example.joke_app.service;
 
 import com.example.joke_app.controller.JokeController;
-import com.example.joke_app.dto.DataDtoRes;
-import com.example.joke_app.dto.JokeDto;
-import com.example.joke_app.exception.GlobalExceptionHandler;
-import com.example.joke_app.exception.InvalidJokeException;
-import com.example.joke_app.exception.JokeFetchException;
-import com.example.joke_app.exception.ValidCountException;
+import com.example.joke_app.dto.DtoRes;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.ResponseEntity;
 import org.springframework.test.web.servlet.MockMvc;
-
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doThrow;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 
 import java.util.Arrays;
 import java.util.List;
-
-import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -40,43 +26,18 @@ public class JokeControllerTest {
     @MockBean
     private JokeService jokeService;
 
-    @InjectMocks
-    private JokeController jokeController;
-
-    @MockBean
-    private JokeDatabaseService jokeDatabaseService;
-
     @Test
     public void testGetJokes_ReturnsJokesList() throws Exception {
-        List<List<JokeDto>> mockJokes = List.of(
-                Arrays.asList(new JokeDto(1L, "Setup 1", "Punchline 1", "type 1"), new JokeDto(2L, "Setup 2", "Punchline 2","type 2")));
+        List<DtoRes> mockJokes =
+                Arrays.asList(new DtoRes(1L, "Setup 1", "Punchline 1"), new DtoRes(2L, "Setup 2", "Punchline 2"));
 
-        when(jokeService.getJokes(2)).thenReturn(new DataDtoRes(mockJokes));
+        when(jokeService.getJokes(2)).thenReturn(mockJokes);
 
         mockMvc.perform(get("/jokes?count=2"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.jokes[0][0].setup").value("Setup 1"))
-                .andExpect(jsonPath("$.jokes[0][0].punchline").value("Punchline 1"))
-                .andExpect(jsonPath("$.jokes[0][1].setup").value("Setup 2"))
-                .andExpect(jsonPath("$.jokes[0][1].punchline").value("Punchline 2"));
+                .andExpect(jsonPath("$.[0].question").value("Setup 1"))
+                .andExpect(jsonPath("$.[0].answer").value("Punchline 1"))
+                .andExpect(jsonPath("$.[1].question").value("Setup 2"))
+                .andExpect(jsonPath("$.[1].answer").value("Punchline 2"));
     }
-
-    @Test
-    public void testGetJokes_ThrowsJokeFetchException() throws Exception {
-        when(jokeService.getJokes(anyInt())).thenThrow(new JokeFetchException("External API failed"));
-
-        mockMvc.perform(get("/jokes?count=2"))
-                .andExpect(status().isServiceUnavailable())
-                .andExpect(content().string("Service failed: External API failed"));
-    }
-
-    @Test
-    public void testGetJokes_ThrowsValidCountException() throws Exception {
-        when(jokeService.getJokes(anyInt())).thenThrow(new ValidCountException("Count should be greater than zero"));
-
-        mockMvc.perform(get("/jokes?count=0"))
-                .andExpect(status().isBadRequest())
-                .andExpect(content().string("Bad Request: Count should be greater than zero"));
-    }
-
 }
